--- a/CursoOnline/test/CursoOnline.DominioTest/CursoOnline.DominioTest.csproj
+++ b/CursoOnline/test/CursoOnline.DominioTest/CursoOnline.DominioTest.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="ExpectedObjects" Version="3.5.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
